z-index fixed

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,22 @@
     font-size: 20px;
     color: whitesmoke;
 }
+
+
+.clearfix:before,
+.clearfix:after {
+    content: " ";
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+.clearfix {
+    *zoom: 1;
+}
+
 /* Source Sans Pro for navi */
 
 html,body {
@@ -172,13 +188,13 @@ header::before {
 .section-supl {
     padding-top: 50px;
     padding-bottom: 50px;
-    overflow: hidden;
+    position: relative;
 }
 
 .section-swipe {
     padding-top: 50px;
     padding-bottom: 100px;
-    overflow: hidden;
+    position: relative;
 }
 
 .section-profile {
@@ -190,7 +206,6 @@ header::before {
 /* SCREENSHOT */
 
 .content img {
-    width: 50%;
     /* animation */
     /*opacity: 0;*/
     /*animation-duration: 2s;*/
@@ -206,13 +221,13 @@ header::before {
 }
 
 .section-supl img {
-    width: 50%;
-    margin-left: 25%;
+    width: 25%;
+    margin-right: 12.5%;
 }
 
 .section-swipe img {
-    margin-left: 30%;
-    width: 40%;
+    margin-left: 15%;
+    width: 20%;
 }
 
 /* SUMMARY */
@@ -221,7 +236,14 @@ header::before {
     padding-left: 1%;
     width: 50%;
     display: inline-block;
+}
+
+.section-supl .summary {
     float: left;
+}
+
+.section-swipe .summary {
+    float: right;
 }
 
 .section-supl .summary h4 {
